Added first approach of base structure.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 application {
-  name = pipe-crm
+  name = ms-exchanger
   env = ${?APP_ENVIRONMENT}
   timezone = "America/Havana"
   port = ${?APP_PORT}
@@ -9,15 +9,24 @@ application {
       url = ${?APP_DATASOURCE_MONGODB_URL}
     }
   }
+  security {
+    realm = ${?APP_ENVIRONMENT}
+    secret = ${?APP_JWT_SECRET}
+    cors {
+      allowed-origins = "*"
+      allowed-headers = "*"
+      allowed-methods = ["GET", "POST", "HEAD", "OPTIONS"]
+      exposed-headers = ["Authorization"]
+      max-age = 1800 seconds
+      allow-credentials = yes
+    }
+  }
 }
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = ${?APP_LOGGING_LEVEL}
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  http {
-    server {
-      server-header = ""
-    }
-  }
 }
+
+akka-http-cors = ${application.security.cors}
