--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
-group 'com.dfl.contest'
+group 'com.dfl.contest.exchanger'
 
 repositories {
     maven {
