--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,11 @@ repositories {
     maven {
         url 'https://nexus.dofleinisoftware.com/repository/maven-public/'
     }
+    mavenLocal()
 }
 
 def versions = [
-        seed: "1.7.2-SNAPSHOT",
+        seed: "2.0.0-SNAPSHOT",
 ]
 
 dependencies {
