--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
       APP_JWT_SECRET: "secret"
       APP_LOGGING_LEVEL: "INFO"
       APP_PORT: 8080
-      APP_DATASOURCE_MONGODB_URL: mongodb://root:example@mongo:27017/
+      APP_DATASOURCE_MONGODB_URL: "mongodb://root:example@mongo:27017/"
+    depends_on:
+      mongo:
+        condition: service_started
     ports:
      - "8080:8080"
   mongo:
