--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,11 @@ application {
 }
 
 akka {
+  http {
+    server: {
+      server-header = "exchanger-server"
+    }
+  }
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = ${?APP_LOGGING_LEVEL}
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
